--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": ">=5.4.1",
         "ext-curl": "*"
     },
+    "minimum-stability": "dev",
     "license": "MIT",
     "authors": [
         {
