--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "A PHP implementation of WMG's Web API",
     "type": "library",
     "require": {
-        "php": "5.4.1",
-        "curl/curl": "dev-master"
+        "php": ">=5.4.1",
+        "ext-curl": "*"
     },
     "license": "MIT",
     "authors": [
