--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
             "email": "blazarov@datamax.bg"
         }
     ],
-    "psr-4": {
-        "realdark\\WmgWebApi": "src/"
+    "autoload": {
+        "psr-4": {
+            "realdark\\WmgWebApi\\": "src/"
+        }
     }
 }
